cartopy/docs/v0.6/_sources/gallery.txt
Gallery
=======
Tags:

.. container:: inline-paragraphs

	:ref:`gallery-tag-Lines and polygons`

	:ref:`gallery-tag-Miscellanea`

	:ref:`gallery-tag-Scalar data`

.. _gallery-tag-Lines and polygons:

Lines and polygons
------------------

.. container:: gallery_images



	|image_rotated_pole|_



	.. |image_rotated_pole| image:: examples/rotated_pole_01_00.thumb.png


	.. _image_rotated_pole: examples/rotated_pole.html


	|image_features|_



	.. |image_features| image:: examples/features_01_00.thumb.png


	.. _image_features: examples/features.html


	|image_feature_creation|_



	.. |image_feature_creation| image:: examples/feature_creation_01_00.thumb.png


	.. _image_feature_creation: examples/feature_creation.html


	|image_hurricane_katrina|_



	.. |image_hurricane_katrina| image:: examples/hurricane_katrina_01_00.thumb.png


	.. _image_hurricane_katrina: examples/hurricane_katrina.html


	|image_global_map|_



	.. |image_global_map| image:: examples/global_map_01_00.thumb.png


	.. _image_global_map: examples/global_map.html
.. _gallery-tag-Miscellanea:

Miscellanea
-----------

.. container:: gallery_images



	|image_favicon|_



	.. |image_favicon| image:: examples/favicon_01_00.thumb.png


	.. _image_favicon: examples/favicon.html


	|image_logo|_



	.. |image_logo| image:: examples/logo_01_00.thumb.png


	.. _image_logo: examples/logo.html
.. _gallery-tag-Scalar data:

Scalar data
-----------

.. container:: gallery_images



	|image_waves|_



	.. |image_waves| image:: examples/waves_01_00.thumb.png


	.. _image_waves: examples/waves.html